# phisher-man

./: .gitignore  COS720 Project Marking Rubric 2025 v1.0.xlsx  docker-compose.yml
diagrams/: Arch-Diagram.drawio  Architecture.drawio  UC-Frontend.drawio  UC-Run-Model.drawio  UC-Train-Model.drawio
doc/: bibliography.bib  doc.tex
doc/model_performance/LogisticRegression/: metrics.txt
doc/model_performance/NaiveBayes/: metrics.txt
doc/model_performance/RandomForest/: metrics.txt
email-parser-ui/: Dockerfile  package-lock.json  package.json  vite.config.ts
email-parser-ui/src/: App.vue  apm-rum-vue.d.ts  main.ts  style.css
email-parser-ui/src/components/: EmailForm.vue
email-parser-ui/src/composables/: useEmailAnalysis.ts  useSanitizer.ts
email-parser-ui/src/page/: PhishingDetector.vue
email-parser-ui/src/types/: index.ts
nginx/: default.conf
phisher-man/: Dockerfile  emails.csv  pyproject.toml  start.sh
phisher-man/app/: main.py
phisher-man/app/api/v1/: endpoints.py
phisher-man/app/models/: prediction.py
phisher-man/app/routes/: predict_raw.py  predict_structured.py
phisher-man/app/services/: explain.py  predictor.py
phisher-man/app/utils/: parser.py  preprocess.py
phisher-man/model_performance/: metrics.txt
phisher-man/models/: LogisticRegression_phishing_model.pkl  NaiveBayes_phishing_model.pkl  combined_text_phishing_model.pkl  phishing_model.pkl  phising_model.pkl  test_phishing_model.pkl
phisher-man/src/phisher_man/: __init__.py  bobber.py  evaluator.py  tackler.py
