[project]
name = "phisher-man"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ivan Horak", email = "ivanhorak20@gmail.com" },
    { name = "u21456552", email = "u21456552@tuks.co.za" }
]
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "elastic-apm>=6.23.0",
    "fastapi[standard]",
    "jellyfish>=1.2.0",
    "joblib>=1.5.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]

[project.scripts]
phisher-man = "phisher_man:main"
train = "phisher_man:tackler"
bob = "phisher_man:bobber"
bob-all = "phisher_man:bobber_all"
big_bait = "phisher_man:big_baiter"
big_bait_train = "phisher_man:big_baiter_train"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
